test/libsolidity/syntaxTests/experimental/parsing/forall_free_function_no_parentheses_multi_type_var.sol
pragma experimental solidity;

forall A, B
function f(a: A) {}
// ====
// EVMVersion: >=constantinople
// ----
// ParserError 5709: (39-40): Expected a function definition.
